--- a/src/views/menu.fxml
+++ b/src/views/menu.fxml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0"
-            prefWidth="546.0" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="controllers.MenuController">
-   <BorderPane layoutY="-7.0" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
-               AnchorPane.topAnchor="-7.0">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="680.0" prefWidth="546.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuController">
+   <BorderPane layoutY="-7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-50.0">
       <center>
-         <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" prefWidth="400.0"
-               style="-fx-background-color: black; -fx-border-radius: 10; -fx-background-radius: 10; -fx-opacity: 0.7;"
-               BorderPane.alignment="CENTER">
-            <TextField maxHeight="-Infinity" maxWidth="-Infinity" onKeyTyped="#handleFileChange" prefWidth="250.0"
-                       promptText="Filename" style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;"/>
-            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="X axis length"
-                       style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;"/>
-            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="Y axis length"
-                       style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;"/>
-            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="Z axis length"
-                       style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;"/>
-            <Button mnemonicParsing="false" onAction="#hello" prefHeight="67.0" prefWidth="270.0"
-                    style="-fx-border-insets: 15; -fx-background-insets: 15; -fx-padding: 25;" text="Button"/>
+         <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: black; -fx-border-radius: 10; -fx-background-radius: 10; -fx-opacity: 0.7;" BorderPane.alignment="CENTER">
+            <ChoiceBox fx:id="filenameChoiceBox" prefHeight="36.0" prefWidth="243.0">
+               <VBox.margin>
+                  <Insets bottom="5.0" />
+               </VBox.margin>
+            </ChoiceBox>
+            <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="X axis length" style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;" fx:id="xText" />
+            <TextField fx:id="yText" maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="Y axis length" style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;" />
+            <TextField fx:id="zText" maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="Z axis length" style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;" />
+            <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefWidth="240.0">
+               <VBox.margin>
+                  <Insets bottom="30.0" top="5.0" />
+               </VBox.margin>
+               <CheckBox fx:id="correctEndianBox" alignment="CENTER" mnemonicParsing="false" text="Correct endian?" textFill="#bcbcbc">
+                  <HBox.margin>
+                     <Insets />
+                  </HBox.margin>
+               </CheckBox>
+            </HBox>
+            <Button fx:id="submitButton" mnemonicParsing="false" onAction="#handleSubmitClick" prefHeight="46.0" prefWidth="251.0" style="-fx-border-insets: 5; -fx-background-insets: 5; -fx-padding: 15;" text="Submit" />
+            <Button fx:id="defaultButton" mnemonicParsing="false" onAction="#handleDefaultClick" prefHeight="47.0" prefWidth="255.0" style="-fx-border-insets: 7; -fx-background-insets: 7; -fx-padding: 10;" text="Default data set" />
          </VBox>
       </center>
    </BorderPane>
