--- a/src/views/menu.fxml
+++ b/src/views/menu.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -14,7 +15,16 @@
    <BorderPane layoutY="-7.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="-50.0">
       <center>
          <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="500.0" prefWidth="400.0" style="-fx-background-color: black; -fx-border-radius: 10; -fx-background-radius: 10; -fx-opacity: 0.7;" BorderPane.alignment="CENTER">
-            <ChoiceBox fx:id="filenameChoiceBox" prefHeight="36.0" prefWidth="243.0">
+            <HBox maxWidth="-Infinity" prefWidth="240.0" VBox.vgrow="NEVER">
+               <children>
+                  <Label text="Select scan file:" textFill="#c9c9c9">
+                     <HBox.margin>
+                        <Insets bottom="3.0" left="3.0" />
+                     </HBox.margin>
+                  </Label>
+               </children>
+            </HBox>
+            <ChoiceBox fx:id="filenameChoiceBox" prefHeight="36.0" prefWidth="240.0">
                <VBox.margin>
                   <Insets bottom="5.0" />
                </VBox.margin>
