--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,51 @@
 .button:hover {
     -fx-background-color: #303030;
 }
+
+.text-field{
+    -fx-background-color: #363636;
+    -fx-border-insets: 5;
+    -fx-background-insets: 5;
+    -fx-text-fill: #aeaeae;
+}
+
+.choice-box{
+    -fx-background-color: #363636;
+    -fx-color-label-visible: #aeaeae;
+}
+
+.choice-box .label {
+    -fx-text-fill: #aeaeae;
+}
+
+.choice-box .menu-item > .label {
+    -fx-text-fill: #aeaeae;
+}
+
+.choice-box .menu {
+    -fx-background-color: #363636;
+}
+
+.check-box .box{
+    -fx-background-color: #363636;
+}
+
+.check-box:selected .mark{
+    -fx-background-color: #0278D7;
+}
+
+.choice-box .context-menu {
+    -fx-background-color: #1D1D1D;
+}
+
+.choice-box .menu-item:focused {
+    -fx-background-color: #0278D7;
+}
+
+.choice-box .menu-item:focused > .label {
+    -fx-text-fill: #1D1D1D;
+}
+
+.choice-box .menu-item > .label {
+    -fx-pref-width: 205;
+}
