--- a/src/views/menu.fxml
+++ b/src/views/menu.fxml
@@ -9,35 +9,52 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<VBox fx:id="menuPane" alignment="CENTER" style="-fx-background-color: #1D1D1D #1D1D1D; -fx-padding: 20;"
-      xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="controllers.MenuController">
+<VBox fx:id="menuPane" alignment="CENTER" style="-fx-background-color: #1D1D1D #1D1D1D; -fx-padding: 20;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MenuController">
    <HBox maxWidth="-Infinity" prefWidth="240.0">
-      <Label text="Select scan file:" textFill="#c9c9c9">
+      <Label text="Select scan file:" textFill="#aeaeae">
          <HBox.margin>
-            <Insets bottom="3.0" left="3.0"/>
+            <Insets bottom="3.0" left="3.0" />
          </HBox.margin>
       </Label>
    </HBox>
-   <ChoiceBox fx:id="filenameChoiceBox" prefHeight="36.0" prefWidth="240.0"/>
-   <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="X axis length"
-              style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;" fx:id="xText"/>
-   <TextField fx:id="yText" maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="Y axis length"
-              style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;"/>
-   <TextField fx:id="zText" maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="Z axis length"
-              style="-fx-background-insets: 5; -fx-border-insets: 5; -fx-padding: 13;"/>
+   <ChoiceBox fx:id="filenameChoiceBox" prefHeight="36.0" prefWidth="240.0">
+      <opaqueInsets>
+         <Insets />
+      </opaqueInsets>
+      <VBox.margin>
+         <Insets bottom="10.0" />
+      </VBox.margin></ChoiceBox>
+   <TextField maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="X axis length" fx:id="xText">
+      <padding>
+         <Insets bottom="13.0" left="13.0" right="13.0" top="13.0" />
+      </padding>
+      <VBox.margin>
+         <Insets bottom="5.0" />
+      </VBox.margin></TextField>
+   <TextField fx:id="yText" maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="Y axis length">
+      <padding>
+         <Insets bottom="13.0" left="13.0" right="13.0" top="13.0" />
+      </padding>
+      <VBox.margin>
+         <Insets bottom="5.0" />
+      </VBox.margin></TextField>
+   <TextField fx:id="zText" maxHeight="-Infinity" maxWidth="-Infinity" prefWidth="250.0" promptText="Z axis length">
+      <padding>
+         <Insets bottom="13.0" left="13.0" right="13.0" top="13.0" />
+      </padding>
+      <VBox.margin>
+         <Insets bottom="5.0" />
+      </VBox.margin></TextField>
    <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefWidth="240.0">
-      <CheckBox fx:id="correctEndianBox" alignment="CENTER" mnemonicParsing="false" text="Correct endian?"
-                textFill="#bcbcbc">
+      <CheckBox fx:id="correctEndianBox" alignment="CENTER" mnemonicParsing="false" text="Correct endian?" textFill="#aeaeae">
          <HBox.margin>
-            <Insets/>
+            <Insets bottom="5.0" top="5.0" />
          </HBox.margin>
       </CheckBox>
    </HBox>
-   <Button fx:id="submitButton" mnemonicParsing="false" onAction="#handleSubmitClick" prefHeight="46.0"
-           prefWidth="251.0" style="-fx-border-insets: 5; -fx-background-insets: 5; -fx-padding: 15;" text="Submit"/>
-   <Button fx:id="defaultButton" mnemonicParsing="false" onAction="#handleDefaultClick" prefHeight="47.0"
-           prefWidth="255.0" style="-fx-border-insets: 7; -fx-background-insets: 7; -fx-padding: 10;"
-           text="Default data set"/>
+   <Button fx:id="submitButton" mnemonicParsing="false" onAction="#handleSubmitClick" prefHeight="46.0" prefWidth="251.0" style="-fx-border-insets: 5; -fx-background-insets: 5; -fx-padding: 15;" text="Submit" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+      <VBox.margin>
+         <Insets top="50.0" />
+      </VBox.margin></Button>
+   <Button fx:id="defaultButton" mnemonicParsing="false" onAction="#handleDefaultClick" prefHeight="47.0" prefWidth="255.0" style="-fx-border-insets: 7; -fx-background-insets: 7; -fx-padding: 10;" text="Default data set" textFill="#aeaeae" />
 </VBox>
