--- a/src/views/viewer.fxml
+++ b/src/views/viewer.fxml
@@ -71,6 +71,9 @@
                      </VBox.margin>
                   </Label>
                   <Slider fx:id="opacitySlider" value="12.0" />
+                  <Slider fx:id="v1" max="500.0" min="-500.0" value="12.0" />
+                  <Slider fx:id="v2" max="500.0" min="-500.0" value="12.0" />
+                  <Slider fx:id="v3" max="500.0" min="-500.0" value="12.0" />
                </VBox>
             </VBox>
             <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
