--- a/src/views/viewer.fxml
+++ b/src/views/viewer.fxml
@@ -70,7 +70,11 @@
                         <Insets bottom="2.0" top="10.0" />
                      </VBox.margin>
                   </Label>
-                  <Slider fx:id="opacitySlider" value="12.0" />
+                  <Slider fx:id="opacitySlider" value="12.0">
+                     <VBox.margin>
+                        <Insets bottom="10.0" />
+                     </VBox.margin></Slider>
+                  <Button fx:id="gradientButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Gradient Shading" textFill="#aeaeae" />
                   <Slider fx:id="v1" max="500.0" min="-500.0" value="12.0" />
                   <Slider fx:id="v2" max="500.0" min="-500.0" value="12.0" />
                   <Slider fx:id="v3" max="500.0" min="-500.0" value="12.0" />
