--- a/src/views/viewer.fxml
+++ b/src/views/viewer.fxml
@@ -16,25 +16,28 @@
       <StackPane id="menuPane" fx:id="menuPane" HBox.hgrow="NEVER">
          <VBox alignment="CENTER" style="-fx-background-color: #1D1D1D #1D1D1D; -fx-padding: 20;">
             <HBox>
-               <Label text="Slice" textFill="#aeaeae" />
+               <Label text="Slice" textFill="#aeaeae">
+                  <HBox.margin>
+                     <Insets bottom="5.0" />
+                  </HBox.margin></Label>
             </HBox>
             <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="250.0">
                <Label text="View 1" textFill="#aeaeae" />
                <Slider fx:id="firstViewSlider" VBox.vgrow="ALWAYS">
                   <VBox.margin>
-                     <Insets bottom="10.0" />
+                     <Insets bottom="7.0" />
                   </VBox.margin>
                </Slider>
                <Label text="View 2" textFill="#aeaeae" />
-               <Slider fx:id="secondViewSlider">
+               <Slider fx:id="secondViewSlider" VBox.vgrow="ALWAYS">
                   <VBox.margin>
-                     <Insets bottom="10.0" />
+                     <Insets bottom="7.0" />
                   </VBox.margin>
                </Slider>
                <Label text="View 3" textFill="#aeaeae" />
-               <Slider fx:id="thirdViewSlider">
+               <Slider fx:id="thirdViewSlider" VBox.vgrow="ALWAYS">
                   <VBox.margin>
-                     <Insets bottom="15.0" />
+                     <Insets bottom="10.0" />
                   </VBox.margin>
                </Slider>
                <Button fx:id="midSlideButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Slice 76" textFill="#aeaeae" VBox.vgrow="ALWAYS">
@@ -46,19 +49,22 @@
                   </VBox.margin>
                </Button>
                <padding>
-                  <Insets left="10.0" right="10.0" top="10.0" />
+                  <Insets left="10.0" right="10.0" />
                </padding>
                <VBox.margin>
                   <Insets bottom="30.0" />
                </VBox.margin>
             </VBox>
             <HBox>
-               <Label text="Effects" textFill="#aeaeae" />
+               <Label text="Effects" textFill="#aeaeae">
+                  <HBox.margin>
+                     <Insets bottom="7.0" />
+                  </HBox.margin></Label>
             </HBox>
             <VBox>
                <VBox VBox.vgrow="ALWAYS">
                   <padding>
-                     <Insets bottom="20.0" left="10.0" right="10.0" top="10.0" />
+                     <Insets bottom="20.0" left="10.0" right="10.0" />
                   </padding>
                   <Button fx:id="mipButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Maximum Intensity Projection" textFill="#aeaeae" VBox.vgrow="ALWAYS">
                      <VBox.margin>
@@ -76,29 +82,39 @@
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Button>
-                  <Label text="Opacity" textFill="#aeaeae">
-                     <VBox.margin>
-                        <Insets bottom="2.0" top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <Slider fx:id="opacitySlider" value="12.0">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin></Slider>
-                  <Button fx:id="gradientButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Gradient Shading" textFill="#aeaeae" VBox.vgrow="ALWAYS">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font></Button>
-                  <Button fx:id="gradientInterpolationButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Interpolation: Off" textFill="#aeaeae" VBox.vgrow="ALWAYS">
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font></Button>
-                  <Label text="Light source" textFill="#aeaeae">
-                     <VBox.margin>
-                        <Insets bottom="2.0" top="10.0" />
-                     </VBox.margin>
-                  </Label>
-                  <Slider fx:id="lightSource" max="256" value="0" />
+                  <VBox fx:id="volRendMenu" visible="false">
+                     <Label text="Opacity" textFill="#aeaeae">
+                        <VBox.margin>
+                           <Insets top="10.0" />
+                        </VBox.margin>
+                     </Label>
+                     <Slider fx:id="opacitySlider" value="12.0">
+                        <VBox.margin>
+                           <Insets bottom="10.0" />
+                        </VBox.margin>
+                     </Slider>
+                     <Button fx:id="gradientButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Gradient Shading" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                        <font>
+                           <Font name="System Bold" size="13.0" />
+                        </font>
+                        <VBox.margin>
+                           <Insets bottom="10.0" />
+                        </VBox.margin>
+                     </Button>
+                     <VBox fx:id="lightMenu" visible="false">
+                        <Button fx:id="gradientInterpolationButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Interpolation: Off" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                        </Button>
+                        <Label text="Light source" textFill="#aeaeae">
+                           <VBox.margin>
+                              <Insets top="10.0" />
+                           </VBox.margin>
+                        </Label>
+                        <Slider fx:id="lightSource" max="256" value="0" />
+                     </VBox>
+                  </VBox>
 
                </VBox>
             </VBox>
@@ -108,7 +124,7 @@
                      <Font size="11.0" />
                   </font>
                   <HBox.margin>
-                     <Insets top="20.0" />
+                     <Insets top="15.0" />
                   </HBox.margin>
                </Button>
             </HBox>
