--- a/src/views/viewer.fxml
+++ b/src/views/viewer.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -130,26 +131,30 @@
             </HBox>
          </VBox>
       </StackPane>
-      <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: #282828; -fx-padding: 10;" HBox.hgrow="ALWAYS">
-         <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="NEVER">
-            <StackPane fx:id="firstViewBackground">
-               <ImageView fx:id="firstView" pickOnBounds="true" preserveRatio="true" />
-            </StackPane>
-         </VBox>
-         <VBox alignment="CENTER" prefHeight="200.0">
-            <StackPane fx:id="secondViewBackground">
-               <ImageView fx:id="secondView" pickOnBounds="true" preserveRatio="true" />
-               <VBox.margin>
-                  <Insets bottom="15.0" left="15.0" />
-               </VBox.margin>
-            </StackPane>
-            <StackPane fx:id="thirdViewBackground">
-               <ImageView fx:id="thirdView" pickOnBounds="true" preserveRatio="true" />
-               <VBox.margin>
-                  <Insets left="15.0" top="15.0" />
-               </VBox.margin>
-            </StackPane>
-         </VBox>
-      </HBox>
+      <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #282828 #282828;" HBox.hgrow="ALWAYS">
+        <content>
+            <HBox alignment="CENTER" style="-fx-background-color: #282828; -fx-padding: 10;">
+               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="NEVER">
+                  <StackPane fx:id="firstViewBackground">
+                     <ImageView fx:id="firstView" pickOnBounds="true" preserveRatio="true" />
+                  </StackPane>
+               </VBox>
+               <VBox alignment="CENTER" prefHeight="200.0">
+                  <StackPane fx:id="secondViewBackground">
+                     <ImageView fx:id="secondView" pickOnBounds="true" preserveRatio="true" />
+                     <VBox.margin>
+                        <Insets bottom="15.0" left="15.0" />
+                     </VBox.margin>
+                  </StackPane>
+                  <StackPane fx:id="thirdViewBackground">
+                     <ImageView fx:id="thirdView" pickOnBounds="true" preserveRatio="true" />
+                     <VBox.margin>
+                        <Insets left="15.0" top="15.0" />
+                     </VBox.margin>
+                  </StackPane>
+               </VBox>
+            </HBox>
+        </content>
+      </ScrollPane>
    </HBox>
 </AnchorPane>
