--- a/src/styles.css
+++ b/src/styles.css
@@ -63,3 +63,20 @@
 .choice-box .menu-item > .label {
     -fx-pref-width: 205;
 }
+
+
+.scroll-pane .scroll-bar {
+    -fx-background-color: #282828;
+}
+
+.scroll-pane .scroll-bar .thumb {
+    -fx-background-color: #1D1D1D;
+}
+
+.scroll-pane > .scroll-bar > .increment-button > .increment-arrow {
+    -fx-background-color: #aeaeae;
+}
+
+.scroll-pane > .scroll-bar > .decrement-button > .decrement-arrow {
+    -fx-background-color: #aeaeae;
+}
