--- a/src/styles.css
+++ b/src/styles.css
@@ -63,3 +63,39 @@
 .choice-box .menu-item > .label {
     -fx-pref-width: 205;
 }
+
+.scroll-pane .scroll-bar {
+    -fx-background-color: #282828;
+}
+
+.scroll-pane .scroll-bar .thumb {
+    -fx-background-color: #1D1D1D;
+    -fx-background-radius: 100;
+}
+
+.scroll-pane .scroll-bar .increment-button {
+    -fx-opacity: 0;
+}
+
+.scroll-pane .scroll-bar .decrement-button  {
+    -fx-opacity: 0;
+}
+
+.scroll-pane .corner  {
+    -fx-opacity: 0;
+}
+
+.scroll-bar:vertical {
+    -fx-pref-width: 13;
+}
+
+.scroll-bar:horizontal {
+    -fx-pref-height: 13;
+}
+
+.scroll-bar .decrement-arrow {
+    -fx-padding:0;
+}
+.scroll-bar .increment-arrow {
+    -fx-padding:0;
+}
