--- a/src/views/viewer.fxml
+++ b/src/views/viewer.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Slider?>
@@ -77,13 +78,19 @@
                   </Button>
                   <Button fx:id="volumeRenderButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Volume Render" textFill="#aeaeae" VBox.vgrow="ALWAYS">
                      <VBox.margin>
-                        <Insets />
+                        <Insets bottom="10.0" />
                      </VBox.margin>
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
                   </Button>
                   <VBox fx:id="volRendMenu" visible="false">
+                     <Label text="Transfer Function" textFill="#aeaeae">
+                        <VBox.margin>
+                           <Insets bottom="4.0" />
+                        </VBox.margin>
+                     </Label>
+                     <ChoiceBox fx:id="tfChoice" prefHeight="27.0" prefWidth="230.0" VBox.vgrow="ALWAYS" />
                      <Label text="Opacity" textFill="#aeaeae">
                         <VBox.margin>
                            <Insets top="10.0" />
@@ -113,7 +120,7 @@
                               <Insets top="10.0" />
                            </VBox.margin>
                         </Label>
-                        <Slider fx:id="lightSource" max="256" value="0" />
+                        <Slider fx:id="lightSource" max="256"/>
                      </VBox>
                   </VBox>
 
@@ -131,30 +138,29 @@
             </HBox>
          </VBox>
       </StackPane>
-      <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #282828 #282828;" HBox.hgrow="ALWAYS">
-        <content>
-            <HBox alignment="CENTER" style="-fx-background-color: #282828; -fx-padding: 10;">
-               <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="NEVER">
-                  <StackPane fx:id="firstViewBackground">
-                     <ImageView fx:id="firstView" pickOnBounds="true" preserveRatio="true" />
-                  </StackPane>
-               </VBox>
-               <VBox alignment="CENTER" prefHeight="200.0">
-                  <StackPane fx:id="secondViewBackground">
-                     <ImageView fx:id="secondView" pickOnBounds="true" preserveRatio="true" />
-                     <VBox.margin>
-                        <Insets bottom="15.0" left="15.0" />
-                     </VBox.margin>
-                  </StackPane>
-                  <StackPane fx:id="thirdViewBackground">
-                     <ImageView fx:id="thirdView" pickOnBounds="true" preserveRatio="true" />
-                     <VBox.margin>
-                        <Insets left="15.0" top="15.0" />
-                     </VBox.margin>
-                  </StackPane>
-               </VBox>
-            </HBox>
-        </content>
+      <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0"
+                  style="-fx-background-color: #282828 #282828;" HBox.hgrow="ALWAYS">
+         <HBox alignment="CENTER" style="-fx-background-color: #282828; -fx-padding: 10;">
+            <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="NEVER">
+               <StackPane fx:id="firstViewBackground">
+                  <ImageView fx:id="firstView" pickOnBounds="true" preserveRatio="true"/>
+               </StackPane>
+            </VBox>
+            <VBox alignment="CENTER" prefHeight="200.0">
+               <StackPane fx:id="secondViewBackground">
+                  <ImageView fx:id="secondView" pickOnBounds="true" preserveRatio="true"/>
+                  <VBox.margin>
+                     <Insets bottom="15.0" left="15.0"/>
+                  </VBox.margin>
+               </StackPane>
+               <StackPane fx:id="thirdViewBackground">
+                  <ImageView fx:id="thirdView" pickOnBounds="true" preserveRatio="true"/>
+                  <VBox.margin>
+                     <Insets left="15.0" top="15.0"/>
+                  </VBox.margin>
+               </StackPane>
+            </VBox>
+         </HBox>
       </ScrollPane>
    </HBox>
 </AnchorPane>
