--- a/src/views/viewer.fxml
+++ b/src/views/viewer.fxml
@@ -13,150 +13,149 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="611.0" style="-fx-background-color: #DFDFDF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #DFDFDF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewerController">
    <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <StackPane id="menuPane" fx:id="menuPane" HBox.hgrow="NEVER">
-         <VBox alignment="CENTER" style="-fx-background-color: #1D1D1D #1D1D1D; -fx-padding: 20;">
-            <HBox>
-               <Label text="Slice" textFill="#aeaeae">
-                  <HBox.margin>
-                     <Insets bottom="5.0" />
-                  </HBox.margin></Label>
-            </HBox>
-            <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefWidth="250.0">
-               <Label text="View 1" textFill="#aeaeae" />
-               <Slider fx:id="firstViewSlider" VBox.vgrow="ALWAYS">
-                  <VBox.margin>
-                     <Insets bottom="7.0" />
-                  </VBox.margin>
-               </Slider>
-               <Label text="View 2" textFill="#aeaeae" />
-               <Slider fx:id="secondViewSlider" VBox.vgrow="ALWAYS">
-                  <VBox.margin>
-                     <Insets bottom="7.0" />
-                  </VBox.margin>
-               </Slider>
-               <Label text="View 3" textFill="#aeaeae" />
-               <Slider fx:id="thirdViewSlider" VBox.vgrow="ALWAYS">
-                  <VBox.margin>
-                     <Insets bottom="10.0" />
-                  </VBox.margin>
-               </Slider>
-               <Button fx:id="midSlideButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Slice 76" textFill="#aeaeae" VBox.vgrow="ALWAYS">
-                  <font>
-                     <Font name="System Bold" size="13.0" />
-                  </font>
-                  <VBox.margin>
-                     <Insets />
-                  </VBox.margin>
-               </Button>
-               <padding>
-                  <Insets left="10.0" right="10.0" />
-               </padding>
-               <VBox.margin>
-                  <Insets bottom="30.0" />
-               </VBox.margin>
-            </VBox>
-            <HBox>
-               <Label text="Effects" textFill="#aeaeae">
-                  <HBox.margin>
-                     <Insets bottom="7.0" />
-                  </HBox.margin></Label>
-            </HBox>
-            <VBox>
-               <VBox VBox.vgrow="ALWAYS">
-                  <padding>
-                     <Insets bottom="20.0" left="10.0" right="10.0" />
-                  </padding>
-                  <Button fx:id="mipButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Maximum Intensity Projection" textFill="#aeaeae" VBox.vgrow="ALWAYS">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                  </Button>
-                  <Button fx:id="volumeRenderButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Volume Render" textFill="#aeaeae" VBox.vgrow="ALWAYS">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                     <font>
-                        <Font name="System Bold" size="13.0" />
-                     </font>
-                  </Button>
-                  <VBox fx:id="volRendMenu" visible="false">
-                     <Label text="Transfer Function" textFill="#aeaeae">
-                        <VBox.margin>
-                           <Insets bottom="4.0" />
-                        </VBox.margin>
+      <ScrollPane fx:id="sc" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxWidth="-Infinity" prefWidth="310.0" style="-fx-background-color: #1D1D1D #1D1D1D #1D1D1D #1D1D1D;" vbarPolicy="NEVER" HBox.hgrow="NEVER">
+         <content>
+            <StackPane id="menuPane" fx:id="menuPane">
+               <VBox alignment="CENTER" style="-fx-background-color: #1D1D1D #1D1D1D; -fx-padding: 20;">
+                  <HBox>
+                     <Label text="Slice" textFill="#aeaeae">
+                        <HBox.margin>
+                           <Insets bottom="5.0" />
+                        </HBox.margin>
                      </Label>
-                     <ChoiceBox fx:id="tfChoice" prefHeight="27.0" prefWidth="230.0" VBox.vgrow="ALWAYS" />
-                     <Label text="Opacity" textFill="#aeaeae">
+                  </HBox>
+                  <VBox maxHeight="-Infinity" maxWidth="-Infinity">
+                     <Label text="View 1" textFill="#aeaeae" />
+                     <Slider fx:id="firstViewSlider" VBox.vgrow="ALWAYS">
                         <VBox.margin>
-                           <Insets top="10.0" />
+                           <Insets bottom="7.0" />
                         </VBox.margin>
-                     </Label>
-                     <Slider fx:id="opacitySlider" value="12.0">
+                     </Slider>
+                     <Label text="View 2" textFill="#aeaeae" />
+                     <Slider fx:id="secondViewSlider" VBox.vgrow="ALWAYS">
+                        <VBox.margin>
+                           <Insets bottom="7.0" />
+                        </VBox.margin>
+                     </Slider>
+                     <Label text="View 3" textFill="#aeaeae" />
+                     <Slider fx:id="thirdViewSlider" VBox.vgrow="ALWAYS">
                         <VBox.margin>
                            <Insets bottom="10.0" />
                         </VBox.margin>
                      </Slider>
-                     <Button fx:id="gradientButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Gradient Shading" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                     <Button fx:id="midSlideButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Slice 76" textFill="#aeaeae" VBox.vgrow="ALWAYS">
                         <font>
                            <Font name="System Bold" size="13.0" />
                         </font>
                         <VBox.margin>
-                           <Insets bottom="10.0" />
+                           <Insets />
                         </VBox.margin>
                      </Button>
-                     <VBox fx:id="lightMenu" visible="false">
-                        <Button fx:id="gradientInterpolationButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Interpolation: Off" textFill="#aeaeae" VBox.vgrow="ALWAYS">
-                           <font>
-                              <Font name="System Bold" size="13.0" />
-                           </font>
-                        </Button>
-                        <Label text="Light source" textFill="#aeaeae">
+                     <VBox.margin>
+                        <Insets bottom="30.0" />
+                     </VBox.margin>
+                  </VBox>
+                  <HBox>
+                     <Label text="Effects" textFill="#aeaeae">
+                        <HBox.margin>
+                           <Insets bottom="7.0" />
+                        </HBox.margin>
+                     </Label>
+                  </HBox>
+                  <VBox maxHeight="-Infinity" maxWidth="-Infinity">
+                     <Button fx:id="mipButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Maximum Intensity Projection" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                        <VBox.margin>
+                           <Insets bottom="10.0" />
+                        </VBox.margin>
+                        <font>
+                           <Font name="System Bold" size="13.0" />
+                        </font>
+                     </Button>
+                     <Button fx:id="volumeRenderButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Volume Render" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                        <VBox.margin>
+                           <Insets bottom="10.0" />
+                        </VBox.margin>
+                        <font>
+                           <Font name="System Bold" size="13.0" />
+                        </font>
+                     </Button>
+                     <VBox fx:id="volRendMenu" visible="false">
+                        <Label text="Transfer Function" textFill="#aeaeae">
+                           <VBox.margin>
+                              <Insets bottom="4.0" />
+                           </VBox.margin>
+                        </Label>
+                        <ChoiceBox fx:id="tfChoice" prefHeight="27.0" prefWidth="230.0" VBox.vgrow="ALWAYS" />
+                        <Label alignment="CENTER" text="Opacity" textFill="#aeaeae">
                            <VBox.margin>
                               <Insets top="10.0" />
                            </VBox.margin>
                         </Label>
-                        <Slider fx:id="lightSource" max="256"/>
+                        <Slider fx:id="opacitySlider" maxWidth="-Infinity" prefWidth="230.0" value="12.0" VBox.vgrow="NEVER">
+                           <VBox.margin>
+                              <Insets bottom="10.0" />
+                           </VBox.margin>
+                        </Slider>
+                        <Button fx:id="gradientButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Gradient Shading" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                           <font>
+                              <Font name="System Bold" size="13.0" />
+                           </font>
+                           <VBox.margin>
+                              <Insets bottom="10.0" />
+                           </VBox.margin>
+                        </Button>
+                        <VBox fx:id="lightMenu" visible="false">
+                           <Button fx:id="gradientInterpolationButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="230.0" style="-fx-padding: 10;" text="Interpolation: Off" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                              <font>
+                                 <Font name="System Bold" size="13.0" />
+                              </font>
+                           </Button>
+                           <Label text="Light source" textFill="#aeaeae">
+                              <VBox.margin>
+                                 <Insets top="10.0" />
+                              </VBox.margin>
+                           </Label>
+                           <Slider fx:id="lightSource" max="256" />
+                           <VBox.margin>
+                              <Insets bottom="40.0" />
+                           </VBox.margin>
+                        </VBox>
                      </VBox>
                   </VBox>
-
+                  <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                     <Button fx:id="openFileButton" mnemonicParsing="false" prefHeight="22.0" prefWidth="230.0" text="Open file" textFill="#aeaeae">
+                        <font>
+                           <Font size="11.0" />
+                        </font>
+                        <HBox.margin>
+                           <Insets top="15.0" />
+                        </HBox.margin>
+                     </Button>
+                  </HBox>
                </VBox>
-            </VBox>
-            <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-               <Button fx:id="openFileButton" mnemonicParsing="false" prefHeight="22.0" prefWidth="230.0" text="Open file" textFill="#aeaeae">
-                  <font>
-                     <Font size="11.0" />
-                  </font>
-                  <HBox.margin>
-                     <Insets top="15.0" />
-                  </HBox.margin>
-               </Button>
-            </HBox>
-         </VBox>
-      </StackPane>
-      <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0"
-                  style="-fx-background-color: #282828 #282828;" HBox.hgrow="ALWAYS">
+            </StackPane>
+         </content>
+      </ScrollPane>
+      <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #282828 #282828;" HBox.hgrow="ALWAYS">
          <HBox alignment="CENTER" style="-fx-background-color: #282828; -fx-padding: 10;">
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0" HBox.hgrow="NEVER">
                <StackPane fx:id="firstViewBackground">
-                  <ImageView fx:id="firstView" pickOnBounds="true" preserveRatio="true"/>
+                  <ImageView fx:id="firstView" pickOnBounds="true" preserveRatio="true" />
                </StackPane>
             </VBox>
             <VBox alignment="CENTER" prefHeight="200.0">
                <StackPane fx:id="secondViewBackground">
-                  <ImageView fx:id="secondView" pickOnBounds="true" preserveRatio="true"/>
+                  <ImageView fx:id="secondView" pickOnBounds="true" preserveRatio="true" />
                   <VBox.margin>
-                     <Insets bottom="15.0" left="15.0"/>
+                     <Insets bottom="15.0" left="15.0" />
                   </VBox.margin>
                </StackPane>
                <StackPane fx:id="thirdViewBackground">
-                  <ImageView fx:id="thirdView" pickOnBounds="true" preserveRatio="true"/>
+                  <ImageView fx:id="thirdView" pickOnBounds="true" preserveRatio="true" />
                   <VBox.margin>
-                     <Insets left="15.0" top="15.0"/>
+                     <Insets left="15.0" top="15.0" />
                   </VBox.margin>
                </StackPane>
             </VBox>
