--- a/src/views/viewer.fxml
+++ b/src/views/viewer.fxml
@@ -13,142 +13,145 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #DFDFDF;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewerController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" style="-fx-background-color: #DFDFDF;" xmlns="http://javafx.com/javafx/" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ViewerController">
    <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-      <ScrollPane fx:id="sc" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxWidth="-Infinity" prefWidth="310.0" style="-fx-background-color: #1D1D1D #1D1D1D #1D1D1D #1D1D1D;" vbarPolicy="NEVER" HBox.hgrow="NEVER">
-         <content>
-            <StackPane id="menuPane" fx:id="menuPane">
-               <VBox alignment="CENTER" style="-fx-background-color: #1D1D1D #1D1D1D; -fx-padding: 20;">
-                  <HBox>
-                     <Label text="Slice" textFill="#aeaeae">
-                        <HBox.margin>
-                           <Insets bottom="5.0" />
-                        </HBox.margin>
-                     </Label>
-                  </HBox>
-                  <VBox maxHeight="-Infinity" maxWidth="-Infinity">
-                     <Label text="View 1" textFill="#aeaeae" />
-                     <Slider fx:id="firstViewSlider" VBox.vgrow="ALWAYS">
-                        <VBox.margin>
-                           <Insets bottom="7.0" />
-                        </VBox.margin>
-                     </Slider>
-                     <Label text="View 2" textFill="#aeaeae" />
-                     <Slider fx:id="secondViewSlider" VBox.vgrow="ALWAYS">
-                        <VBox.margin>
-                           <Insets bottom="7.0" />
-                        </VBox.margin>
-                     </Slider>
-                     <Label text="View 3" textFill="#aeaeae" />
-                     <Slider fx:id="thirdViewSlider" VBox.vgrow="ALWAYS">
-                        <VBox.margin>
-                           <Insets bottom="10.0" />
-                        </VBox.margin>
-                     </Slider>
-                     <Button fx:id="midSlideButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="250.0" style="-fx-padding: 10;" text="Slice 76" textFill="#aeaeae" VBox.vgrow="ALWAYS">
-                        <font>
-                           <Font name="System Bold" size="13.0" />
-                        </font>
-                        <VBox.margin>
-                           <Insets />
-                        </VBox.margin>
-                     </Button>
+      <ScrollPane fx:id="sc" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxWidth="-Infinity"
+                  prefWidth="310.0" style="-fx-background-color: #1D1D1D #1D1D1D #1D1D1D #1D1D1D;" vbarPolicy="NEVER"
+                  HBox.hgrow="NEVER">
+         <StackPane id="menuPane" fx:id="menuPane">
+            <VBox alignment="CENTER" style="-fx-background-color: #1D1D1D #1D1D1D; -fx-padding: 20;">
+               <HBox>
+                  <Label text="Slice" textFill="#aeaeae">
+                     <HBox.margin>
+                        <Insets bottom="5.0"/>
+                     </HBox.margin>
+                  </Label>
+               </HBox>
+               <VBox maxHeight="-Infinity" maxWidth="-Infinity">
+                  <Label text="View 1" textFill="#aeaeae"/>
+                  <Slider fx:id="firstViewSlider" VBox.vgrow="ALWAYS">
                      <VBox.margin>
-                        <Insets bottom="30.0" />
+                        <Insets bottom="7.0"/>
                      </VBox.margin>
-                  </VBox>
-                  <HBox>
-                     <Label text="Effects" textFill="#aeaeae">
-                        <HBox.margin>
-                           <Insets bottom="7.0" />
-                        </HBox.margin>
-                     </Label>
-                  </HBox>
-                  <VBox maxHeight="-Infinity" maxWidth="-Infinity">
-                     <Button fx:id="mipButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="250.0" style="-fx-padding: 10;" text="Maximum Intensity Projection" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                  </Slider>
+                  <Label text="View 2" textFill="#aeaeae"/>
+                  <Slider fx:id="secondViewSlider" VBox.vgrow="ALWAYS">
+                     <VBox.margin>
+                        <Insets bottom="7.0"/>
+                     </VBox.margin>
+                  </Slider>
+                  <Label text="View 3" textFill="#aeaeae"/>
+                  <Slider fx:id="thirdViewSlider" VBox.vgrow="ALWAYS">
+                     <VBox.margin>
+                        <Insets bottom="10.0"/>
+                     </VBox.margin>
+                  </Slider>
+                  <Button fx:id="midSlideButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="250.0"
+                          style="-fx-padding: 10;" text="Slice 76" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                     <font>
+                        <Font name="System Bold" size="13.0"/>
+                     </font>
+                     <VBox.margin>
+                        <Insets/>
+                     </VBox.margin>
+                  </Button>
+                  <VBox.margin>
+                     <Insets bottom="30.0"/>
+                  </VBox.margin>
+               </VBox>
+               <HBox>
+                  <Label text="Effects" textFill="#aeaeae">
+                     <HBox.margin>
+                        <Insets bottom="7.0"/>
+                     </HBox.margin>
+                  </Label>
+               </HBox>
+               <VBox maxHeight="-Infinity" maxWidth="-Infinity">
+                  <Button fx:id="mipButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="250.0"
+                          style="-fx-padding: 10;" text="Maximum Intensity Projection" textFill="#aeaeae"
+                          VBox.vgrow="ALWAYS">
+                     <VBox.margin>
+                        <Insets bottom="10.0"/>
+                     </VBox.margin>
+                     <font>
+                        <Font name="System Bold" size="13.0"/>
+                     </font>
+                  </Button>
+                  <Button fx:id="volumeRenderButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="250.0"
+                          style="-fx-padding: 10;" text="Volume Render" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                     <VBox.margin>
+                        <Insets bottom="10.0"/>
+                     </VBox.margin>
+                     <font>
+                        <Font name="System Bold" size="13.0"/>
+                     </font>
+                  </Button>
+                  <VBox fx:id="volRendMenu" alignment="CENTER" visible="false">
+                     <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefWidth="240.0">
                         <VBox.margin>
-                           <Insets bottom="10.0" />
+                           <Insets bottom="4.0"/>
                         </VBox.margin>
-                        <font>
-                           <Font name="System Bold" size="13.0" />
-                        </font>
-                     </Button>
-                     <Button fx:id="volumeRenderButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="250.0" style="-fx-padding: 10;" text="Volume Render" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                        <Label alignment="TOP_LEFT" text="Transfer Function" textFill="#aeaeae"/>
+                     </HBox>
+                     <ChoiceBox fx:id="tfChoice" prefHeight="27.0" prefWidth="240.0" VBox.vgrow="ALWAYS"/>
+                     <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefWidth="240.0">
                         <VBox.margin>
-                           <Insets bottom="10.0" />
+                           <Insets top="10.0"/>
                         </VBox.margin>
+                        <Label alignment="TOP_LEFT" text="Opacity" textFill="#aeaeae"/>
+                     </HBox>
+                     <Slider fx:id="opacitySlider" maxWidth="-Infinity" prefWidth="240.0" value="12.0"
+                             VBox.vgrow="NEVER">
+                        <VBox.margin>
+                           <Insets bottom="10.0"/>
+                        </VBox.margin>
+                     </Slider>
+                     <Button fx:id="gradientButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="240.0"
+                             style="-fx-padding: 10;" text="Gradient Shading" textFill="#aeaeae" VBox.vgrow="ALWAYS">
                         <font>
-                           <Font name="System Bold" size="13.0" />
+                           <Font name="System Bold" size="13.0"/>
                         </font>
+                        <VBox.margin>
+                           <Insets bottom="10.0"/>
+                        </VBox.margin>
                      </Button>
-                     <VBox fx:id="volRendMenu" alignment="CENTER" visible="false">
-                        <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefWidth="240.0">
-                           <VBox.margin>
-                              <Insets bottom="4.0" />
-                           </VBox.margin>
-                           <children>
-                              <Label alignment="TOP_LEFT" text="Transfer Function" textFill="#aeaeae" />
-                           </children>
-                        </HBox>
-                        <ChoiceBox fx:id="tfChoice" prefHeight="27.0" prefWidth="240.0" VBox.vgrow="ALWAYS" />
-                        <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefWidth="240.0">
-                           <VBox.margin>
-                              <Insets top="10.0" />
-                           </VBox.margin>
-                           <children>
-                              <Label alignment="TOP_LEFT" text="Opacity" textFill="#aeaeae" />
-                           </children>
-                        </HBox>
-                        <Slider fx:id="opacitySlider" maxWidth="-Infinity" prefWidth="240.0" value="12.0" VBox.vgrow="NEVER">
-                           <VBox.margin>
-                              <Insets bottom="10.0" />
-                           </VBox.margin>
-                        </Slider>
-                        <Button fx:id="gradientButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="240.0" style="-fx-padding: 10;" text="Gradient Shading" textFill="#aeaeae" VBox.vgrow="ALWAYS">
+                     <VBox fx:id="lightMenu" alignment="CENTER" visible="false">
+                        <Button fx:id="gradientInterpolationButton" mnemonicParsing="false" prefHeight="27.0"
+                                prefWidth="240.0" style="-fx-padding: 10;" text="Interpolation: Off" textFill="#aeaeae"
+                                VBox.vgrow="ALWAYS">
                            <font>
-                              <Font name="System Bold" size="13.0" />
+                              <Font name="System Bold" size="13.0"/>
                            </font>
-                           <VBox.margin>
-                              <Insets bottom="10.0" />
-                           </VBox.margin>
                         </Button>
-                        <VBox fx:id="lightMenu" alignment="CENTER" visible="false">
-                           <Button fx:id="gradientInterpolationButton" mnemonicParsing="false" prefHeight="27.0" prefWidth="240.0" style="-fx-padding: 10;" text="Interpolation: Off" textFill="#aeaeae" VBox.vgrow="ALWAYS">
-                              <font>
-                                 <Font name="System Bold" size="13.0" />
-                              </font>
-                           </Button>
-                           <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefWidth="240.0">
-                              <VBox.margin>
-                                 <Insets top="10.0" />
-                              </VBox.margin>
-                              <children>
-                                 <Label alignment="TOP_LEFT" text="Light source" textFill="#aeaeae" />
-                              </children>
-                           </HBox>
-                           <Slider fx:id="lightSource" max="256" maxWidth="-Infinity" prefWidth="240.0" />
+                        <HBox alignment="CENTER_LEFT" maxWidth="-Infinity" prefWidth="240.0">
                            <VBox.margin>
-                              <Insets bottom="40.0" />
+                              <Insets top="10.0"/>
                            </VBox.margin>
-                        </VBox>
+                           <Label alignment="TOP_LEFT" text="Light source" textFill="#aeaeae"/>
+                        </HBox>
+                        <Slider fx:id="lightSource" max="256" maxWidth="-Infinity" prefWidth="240.0"/>
                         <VBox.margin>
-                           <Insets top="10.0" />
+                           <Insets bottom="40.0"/>
                         </VBox.margin>
                      </VBox>
+                     <VBox.margin>
+                        <Insets top="10.0"/>
+                     </VBox.margin>
                   </VBox>
-                  <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
-                     <Button fx:id="openFileButton" mnemonicParsing="false" prefHeight="22.0" prefWidth="250.0" text="Open file" textFill="#aeaeae">
-                        <font>
-                           <Font size="11.0" />
-                        </font>
-                        <HBox.margin>
-                           <Insets top="15.0" />
-                        </HBox.margin>
-                     </Button>
-                  </HBox>
                </VBox>
-            </StackPane>
-         </content>
+               <HBox alignment="BOTTOM_CENTER" prefHeight="100.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
+                  <Button fx:id="openFileButton" mnemonicParsing="false" prefHeight="22.0" prefWidth="250.0"
+                          text="Open file" textFill="#aeaeae">
+                     <font>
+                        <Font size="11.0"/>
+                     </font>
+                     <HBox.margin>
+                        <Insets top="15.0"/>
+                     </HBox.margin>
+                  </Button>
+               </HBox>
+            </VBox>
+         </StackPane>
       </ScrollPane>
       <ScrollPane fitToHeight="true" fitToWidth="true" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #282828 #282828;" HBox.hgrow="ALWAYS">
          <HBox alignment="CENTER" style="-fx-background-color: #282828; -fx-padding: 10;">
